<resources>
    <string name="appName">Look Up</string>
    <string name="appDescription">A participatory public art app about not using apps. It prompts New Yorkers to look away from their phones and into the street intersections to embrace the diversity and engage in the serendipity of the city. Whether it\'s strangers making eye contact and saying hello or friends hugging, Look Up hopes to tear down the digital walls we build up, opening us to seeing, acknowledging and valuing the people and city around us.</string>
    <string name="appCredits">by Ekene Ijeoma</string>
    <string name="setAll">All</string>
    <string name="setRandom">Random</string>
    <string name="setEvery">Every 3</string>
    <string name="setInVehicle">In vehicle</string>
    <string name="setOnBicycle">On bicycle</string>
    <string name="setOnFoot">On foot</string>
</resources>
