<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/setWallpaper"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp"
                android:text="Intersections "
                android:textColor="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/setAll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#fff"
                    android:checked="true"
                    android:text="@string/setAll"
                    android:textColor="#fff" />

                <RadioButton
                    android:id="@+id/setEvery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#fff"
                    android:checked="false"
                    android:text="@string/setEvery"
                    android:textColor="#fff" />

                <RadioButton
                    android:id="@+id/setRandom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#fff"
                    android:checked="false"
                    android:text="@string/setRandom"
                    android:textColor="#fff" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp"
                android:text="Transportation"
                android:textColor="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/setOnFoot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#fff"
                    android:checked="true"
                    android:text="@string/setOnFoot"
                    android:textColor="#fff" />

                <CheckBox
                    android:id="@+id/setOnBicycle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#fff"
                    android:checked="false"
                    android:text="@string/setOnBicycle"
                    android:textColor="#fff" />

                <CheckBox
                    android:id="@+id/setInVehicle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#fff"
                    android:checked="false"
                    android:text="@string/setInVehicle"
                    android:textColor="#fff" />

            </LinearLayout>

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
            <!--android:id="@+id/textView4"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="Flashlight"-->
            <!--android:textColor="#fff" />-->

            <!--</LinearLayout>-->

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:orientation="horizontal">-->

            <!--<ToggleButton-->
            <!--android:id="@+id/setFlashlight"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:checked="true"-->
            <!--android:text="Flashlight" />-->

            <!--</LinearLayout>-->

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/lookup" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/appDescription"
            android:textColor="#fff" />

        <Button
            android:id="@+id/setWallpaper"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:background="#00c691"
            android:text="Set wallpaper"
            android:textColor="#000" />

    </RelativeLayout>

</RelativeLayout>